Minor styling fix for control alignment

--- a/app.css
+++ b/app.css
@@ -241,6 +241,7 @@ padding-bottom:12px
 
 #notenrechts{
 margin-top:18px;
+margin-left:12px;
 display:none;
 }
 
